--- a/index.html
+++ b/index.html
@@ -32,17 +32,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p><i class="fa fa-phone-square"></i>  +086-156 186 77951</p></div>
+                        <div class="top-number"><p><i class="fa fa-phone-square"></i>  +(086)15618677951</p></div>
                     </div>
                     <div class="col-sm-6 col-xs-8">
                        <div class="social">
-                            <ul class="social-share">
-                                <li><a href="#section1"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                            </ul>
+                     
                             <div class="search">
                                 <form role="form">
                                     <input type="text" class="search-form" autocomplete="off" placeholder="Search">
@@ -96,8 +90,8 @@
                         <div class="row slide-margin">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">我们年轻而又专业</h1>
-                                    <h2 class="animation animated-item-2">为你解决所有技术问题...</h2>
+                                    <h1 class="animation animated-item-1">我们年轻而专业</h1>
+                                    <h2 class="animation animated-item-2">致力于为你解决所有技术问题...</h2>
                                     <a class="btn-slide animation animated-item-3" href="#section1">Read More</a>
                                 </div>
                             </div>
@@ -388,7 +382,7 @@
                             <div class="panel-heading">
                               <h3 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo1">
-                                  Zeji
+                                  Zeke
                                   <i class="fa fa-angle-right pull-right"></i>
                                 </a>
                               </h3>
