--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                               <div class="panel-body">
                                   <div class="media accordion-inner">
                                         <div class="pull-left">
-                                            <img class="img-responsive" src="images/accordion1.png">
+                                            <img class="img-circle" src="images/stella.JPG">
                                         </div>
                                         <div class="media-body">
                                              <h4>Senior architect</h4>
@@ -391,7 +391,7 @@
                               <div class="panel-body">
                                    <div class="media accordion-inner">
                                         <div class="pull-left">
-                                            <img class="img-responsive" src="images/accordion1.png">
+                                            <img class="img-circle" src="images/zeke.JPG">
                                         </div>
                                         <div class="media-body">
                                              <h4>高级运维</h4>
@@ -415,7 +415,7 @@
                               <div class="panel-body">
                                  <div class="media accordion-inner">
                                         <div class="pull-left">
-                                            <img class="img-responsive" src="images/accordion1.png">
+                                            <img class="img-circle" src="images/viaji.JPG">
                                         </div>
                                         <div class="media-body">
                                              <h4>高级设计师</h4>
