add baidu tongji

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
+<script type="text/javascript">
+  var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+  document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fbec2dd95951470cc3b997948c06caa20' type='text/javascript'%3E%3C/script%3E"));
+</script>
 
 <body class="homepage">
 
