--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">SK Soltuion</a>
+                    <a class="navbar-brand" href="index.html">SK Solution</a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
